[NWPS-1463] - Fixed skip link z-index and blank sub header link

--- a/app/assets/hee/parent-alpha.scss
+++ b/app/assets/hee/parent-alpha.scss
@@ -9,3 +9,7 @@
     }
   }
 }
+
+.nhsuk-skip-link {
+  z-index: 150 !important;
+}
